Fix for names which are too long

--- a/app/containers/Profile.scss
+++ b/app/containers/Profile.scss
@@ -17,15 +17,17 @@
   display: flex;
   align-items: flex-end;
   transform: translateY(-44px);;
+
   .UserAvatar {
     margin-left: 3.875rem;
     border: 2px solid white;
     box-shadow: $box-shadow-depth-1;
   }
   h1 {
-    @include ellipsis();
     margin: 0rem 0 0rem 1rem;
     font-weight: lighter;
+    height: 1.2em;
+    overflow: hidden;
   }
   h3 {
     margin: .5rem 0 .5rem 1rem;
